manifest/objects/Broker_Opp_Rel__c.object
<CustomObject>
    <description>Junction object between Broker Account Relationship  and Opportunity</description>
    <fields>
        <fullName>Broker_Account_Name__c</fullName>
        <description>Benefit Sponsor Account name populated by a formula from the Account Relationship where type equals &quot;Broker&quot;.  THIS IS NOT THE BROKER&apos;S NAME</description>
        <formula>Broker_Rel__r.Benefit_Sponsor__r.Name</formula>
        <label>Benefit Sponsor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact associated with the Broker Account</description>
        <label>Broker Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Broker_Flat_Rate__c</fullName>
        <description>Copied from Account Relationship during creation.</description>
        <label>Broker Flat-Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Broker_Percentage__c</fullName>
        <description>Copied from Account Relationship during creation.</description>
        <label>Broker Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Broker_Rel__c</fullName>
        <description>Account Relationship type of Broker</description>
        <label>Broker Relationship</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>No Broker Relationship found for the Account</errorMessage>
            <filterItems>
                <field>Acct_Rel__c.Relationship_Type__c</field>
                <operation>equals</operation>
                <value>Broker, Benefit Partner or Vendor, Broker/Benefit Consultant</value>
            </filterItems>
            <infoMessage>Please Search and Select the Broker Relationship for the Account.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Acct_Rel__c</referenceTo>
        <relationshipName>Broker_Opportunities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Chronic_Care_Broker_Flat_Rate__c</fullName>
        <label>Chronic Care Broker Flat Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Chronic_Care_Broker_Percentage__c</fullName>
        <label>Chronic Care Broker Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Composite_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>broker opp + broker acct rel + contact</description>
        <externalId>true</externalId>
        <label>Composite Key</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Contact_Location__c</fullName>
        <formula>Broker_Contact__r.Office_Location_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_of_Record__c</fullName>
        <description>Copied from Broker_Contact__r.Location__r.Name</description>
        <label>Location of Record</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Account__c</fullName>
        <formula>Opp_Broker__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Broker__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Opportunity_Brokers</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <formula>TEXT(Opp_Broker__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Servicing_Account__c</fullName>
        <formula>Broker_Rel__r.Svc_Acct__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Servicing Account</label>
        <type>Text</type>
    </fields>
    <label>Broker / Ben Con Opportunity Relation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BO-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Broker Opportunity Relations</pluralLabel>
    <recordTypes>
        <fullName>Edit_Broker_Relationship</fullName>
        <active>true</active>
        <description>This will be used for editing only</description>
        <label>Edit Broker Relationship</label>
    </recordTypes>
    <recordTypes>
        <fullName>New_Broker_Relationship</fullName>
        <active>true</active>
        <description>This will the default record type used</description>
        <label>New Broker Relationship</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Validate_Broker_Contact</fullName>
        <active>false</active>
        <errorConditionFormula>if(Broker_Contact__c = &apos;&apos;, FALSE , if((Broker_Contact__r.Account.Id != Broker_Rel__r.Benefit_Sponsor__r.Id) &amp;&amp; (Broker_Contact__r.Account.Id != Broker_Rel__r.Svc_Acct__r.Id) ,TRUE,FALSE))</errorConditionFormula>
        <errorMessage>Broker Contact Selected is not associated with the Broker Relationship of the Opportunity Account</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Broker_Relationship</fullName>
        <active>true</active>
        <description>Validate the Broker Relationship selected is associated with the Opportunity Account.</description>
        <errorConditionFormula>Broker_Rel__r.Benefit_Sponsor__r.Id  !=   Opp_Broker__r.Account.Id</errorConditionFormula>
        <errorMessage>The Broker Relationship selected is not associated with the Opportunity Account.</errorMessage>
    </validationRules>
</CustomObject>